<resources>
    <string name="app_name">baodin</string>

    <!-- MainActivity: Login START -->
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="button_login">Login</string>
    <string name="label_or">OR</string>

    <!-- Login Server -->
    <string name="client_id_release">937928114822-gq7o351ic6cf7bbnufl08g82netam1dk.apps.googleusercontent.com</string>
    <string name="client_id_debug">1021579892981-bkg704cf83p64mk8eu28mho4f2oora2a.apps.googleusercontent.com</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>

    <string name="loading">Loading…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!-- MainActivity: Login END -->

    <!-- MainActivity: Bottom Navigation Bar START -->
    <string name="text_search">Search Fragment</string>
    <string name="text_favorite">Favorite Fragment</string>
    <string name="text_user_profile">User Profile Fragment</string>

    <string name="menu_favorite">Favorite</string>
    <string name="menu_search">Search</string>
    <string name="menu_user_profile">User Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- MainActivity: Bottom Navigation Bar END -->

</resources>
